# dengue-dashboard

./: .env  .env.example  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  barangays_geom_stage.csv  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json
.worker_tmp/70f0b808-5451-4490-b057-f845c6b2c896/: DATA REQUEST 2025-2017..xlsx
.worker_tmp/7da23fb4-b46b-4502-a460-6fb1ccbb15e9/: dengue2025-2017.xlsx
api/: admin_uploads.py  auth.py  choropleth.py  diagnostics.py  forecast.py  forecast_rankings.py  geo.py  info.py  jenks.py  main.py  public_meta.py  risk.py  run_helpers.py  supabase_client.py  timeseries.py  utils.py  worker.py
api/hotspots/: top.py
data/: DAVAO_Points_geo.geojson  DAVAO_Poly_geo.geojson  info.py  population.csv  wait.py
denguard/: config.py  export_supabase.py  forecast_schema.py  hayy.py  horizon.py  io_loader.py  keys.py  normalize.py  old_export.py  old_pipeline.py  pipeline.py  selection.py  supabase_client.py  utils.py  wait.py
denguard/dashboard/: export.py
denguard/export/: dashboard_export.py
denguard/steps/: step10_disagg.py  step11_prophet_diag.py  step12_plot_sample.py  step13_errors.py  step15_prophet_cv.py  step16_health.py  step17_tiers.py  step18_local_models.py  step18_local_models_production.py  (+12 more)
dengue-web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
dengue_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dengue_incoming/: DATA REQUEST 2025-2017.xlsx
policies/: local_model_performance_backtest_2022-12-26_3b3037b5.csv
worker/: runner.py
(+69 files in other folders)
